--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nodegui/packer": "^1.4.1",
     "@types/node": "^15.0.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^8.1.1",
     "file-loader": "^6.2.0",
     "native-addon-loader": "^2.0.1",
     "ts-loader": "^9.1.1",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@nodegui/nodegui": "^0.30.2",
     "@nodegui/react-nodegui": "^0.12.0",
-    "react": "^17.0.2"
+    "iohook": "^0.6.6",
+    "react": "^16.9.0"
   }
 }
