--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
   },
   "homepage": "https://github.com/472647301/nodegui-timer#readme",
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.7",
     "@nodegui/packer": "^1.4.1",
     "@types/node": "^15.0.1",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^8.1.1",
     "file-loader": "^6.2.0",
@@ -34,6 +43,10 @@
     "@nodegui/nodegui": "^0.30.2",
     "@nodegui/react-nodegui": "^0.12.0",
     "iohook": "^0.6.6",
-    "react": "^16.9.0"
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "nodegui-stylesheet": "^0.3.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
