--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nodegui/nodegui": "^0.30.2",
     "@nodegui/react-nodegui": "^0.12.0",
     "iohook": "^0.6.6",
+    "js-base64": "^3.6.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "nodegui-stylesheet": "^0.3.0",
