--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mobx-react": "^6.2.2",
     "nodegui-stylesheet": "^0.3.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "robotjs": "^0.6.0"
   }
 }
